no photo in last one

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
   /* border: 1px solid darkslategray; */
 }
 
-h1 {
+/* h1 {
   background-image: url("bwBAE.jpeg");
   background-repeat: no-repeat;
   background-position: top;
@@ -16,7 +16,7 @@ h1 {
   color: whitesmoke;
   font: 70px Helvetica, Arial;
   padding-bottom: 19px
-}
+} */
 
 /*----------------Nav Bar-------------*/
 /* .navbar {
